--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 <body>
 
   <header>
-    Information Mediator
+    Ticket Pilot
   </header>
 
   <main>
-    <p>Welcome to the Information Mediator — your intelligent assistant powered by Dialogflow.</p>
+    <p>Welcome to the Ticket Pilot — your intelligent assistant powered by Dialogflow.</p>
     <p>Ask your project management questions by clicking the chat bubble in the bottom right.</p>
   </main>
 
