--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Information Mediator</title>
+  <title>Ticket Pilot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- Dialogflow Messenger UI -->
@@ -70,11 +70,7 @@
         agent-id="db5b3f3a-f656-4c7e-88f1-15c8b443fe8f"
         language-code="en"
         max-query-length="-1">
-<<<<<<< Updated upstream
-        <df-messenger-chat-bubble chat-title="Project Manager"></df-messenger-chat-bubble>
-=======
         <df-messenger-chat-bubble chat-title="Ticket Pilot"></df-messenger-chat-bubble>
->>>>>>> Stashed changes
       </df-messenger>
     </div>
   </main>
