--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- Dialogflow Messenger UI -->
   <link rel="stylesheet" href="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/themes/df-messenger-default.css">
-  <script src="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/df-messenger.js"></script>
+  <script src="https://www.gstatic.com/dialogflow-console/fast/df-messenger.js"></script>
 
   <style>
     body {
@@ -31,7 +31,7 @@
     }
 
     main {
-      padding: 40px;
+      padding: 60px 20px;
       max-width: 800px;
       text-align: center;
     }
@@ -39,7 +39,7 @@
     #chat-container {
       display: flex;
       justify-content: center;
-      margin-top: 40px;
+      margin: 80px auto; /* moves the bot lower down */
     }
 
     df-messenger {
@@ -48,6 +48,7 @@
       --df-messenger-chat-background: #f3f6fc;
       --df-messenger-message-user-background: #d3e3fd;
       --df-messenger-message-bot-background: #fff;
+      --df-messenger-chat-bubble-background: #3f51b5; /* makes chat button blue */
       max-width: 400px;
       width: 100%;
       height: 600px;
