--- a/index.html
+++ b/index.html
@@ -34,24 +34,35 @@
       padding: 60px 20px;
       max-width: 800px;
       text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+    }
+
+    button.custom-launch {
+      background-color: #3f51b5;
+      color: white;
+      padding: 12px 24px;
+      font-size: 16px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      margin-top: 40px;
+    }
+
+    button.custom-launch:hover {
+      background-color: #2c3e91;
     }
 
     df-messenger {
+      position: fixed;
+      bottom: 16px;
+      right: 16px;
+      z-index: 9999;
+
       --df-messenger-font-color: #000;
       --df-messenger-font-family: "Google Sans", sans-serif;
       --df-messenger-chat-background: #f3f6fc;
       --df-messenger-message-user-background: #d3e3fd;
       --df-messenger-message-bot-background: #fff;
       --df-messenger-chat-bubble-background: #3f51b5;
-
-      max-width: 400px;
-      width: 100%;
-      height: 600px;
-      margin-top: 60px;
-      position: static; /* disables fixed position */
     }
   </style>
 </head>
@@ -63,17 +74,29 @@
 
   <main>
     <p>Welcome to Ticket Pilot — your intelligent assistant for managing Jira-style tasks and ticketing workflows.</p>
-    <p>Click the button below to start chatting.</p>
+    <p>Click below to start chatting:</p>
 
-    <df-messenger
-      location="us-central1"
-      project-id="hackathon-overlords"
-      agent-id="db5b3f3a-f656-4c7e-88f1-15c8b443fe8f"
-      language-code="en"
-      max-query-length="-1">
-      <df-messenger-chat-bubble chat-title="Ticket Pilot"></df-messenger-chat-bubble>
-    </df-messenger>
+    <button class="custom-launch" onclick="launchChat()">Start Chat</button>
   </main>
+
+  <!-- Hidden chatbot -->
+  <df-messenger
+    location="us-central1"
+    project-id="hackathon-overlords"
+    agent-id="db5b3f3a-f656-4c7e-88f1-15c8b443fe8f"
+    language-code="en"
+    max-query-length="-1">
+    <df-messenger-chat-bubble chat-title="Ticket Pilot"></df-messenger-chat-bubble>
+  </df-messenger>
+
+  <script>
+    function launchChat() {
+      const bubble = document.querySelector("df-messenger").shadowRoot
+        .querySelector("df-messenger-chat-bubble")
+        .shadowRoot.querySelector("button");
+      bubble.click();
+    }
+  </script>
 
 </body>
 </html>
