--- a/index.html
+++ b/index.html
@@ -52,16 +52,23 @@
     }
 
     #chat-wrapper {
-      display: none;
-      margin-top: 40px;
       width: 100%;
       max-width: 600px;
+      transition: all 0.3s ease-in-out;
+      margin-top: 40px;
+      visibility: hidden;
+      height: 0;
+      overflow: hidden;
+    }
+
+    #chat-wrapper.active {
+      visibility: visible;
+      height: 600px;
     }
 
     df-messenger {
       width: 100%;
-      height: 600px;
-
+      height: 100%;
       --df-messenger-font-color: #000;
       --df-messenger-font-family: "Google Sans", sans-serif;
       --df-messenger-chat-background: #f3f6fc;
@@ -96,8 +103,9 @@
 
   <script>
     function launchChat() {
-      document.getElementById("chat-wrapper").style.display = "block";
-      window.scrollTo({ top: document.getElementById("chat-wrapper").offsetTop - 50, behavior: "smooth" });
+      const chatWrapper = document.getElementById("chat-wrapper");
+      chatWrapper.classList.add("active");
+      chatWrapper.scrollIntoView({ behavior: "smooth", block: "start" });
     }
   </script>
 
