--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Information Mediator</title>
+  <title>Ticket Pilot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- Dialogflow Messenger UI -->
   <link rel="stylesheet" href="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/themes/df-messenger-default.css">
-  <script src="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/df-messenger.js"></script>
+  <script src="https://www.gstatic.com/dialogflow-console/fast/df-messenger.js"></script>
 
   <style>
     body {
@@ -36,28 +36,32 @@
       text-align: center;
     }
 
+    /* Center the Dialogflow bubble at bottom */
     df-messenger {
-      z-index: 999;
       position: fixed;
       bottom: 16px;
-      right: 16px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 9999;
+
       --df-messenger-font-color: #000;
       --df-messenger-font-family: "Google Sans", sans-serif;
       --df-messenger-chat-background: #f3f6fc;
       --df-messenger-message-user-background: #d3e3fd;
       --df-messenger-message-bot-background: #fff;
+      --df-messenger-chat-bubble-background: #3f51b5;
     }
   </style>
 </head>
 <body>
 
   <header>
-    Information Mediator
+    Ticket Pilot
   </header>
 
   <main>
-    <p>Welcome to the Information Mediator — your intelligent assistant powered by Dialogflow.</p>
-    <p>Ask your project management questions by clicking the chat bubble in the bottom right.</p>
+    <p>Welcome to Ticket Pilot — your intelligent assistant powered by Dialogflow.</p>
+    <p>Ask your project management questions by clicking the chat bubble below.</p>
   </main>
 
   <!-- Dialogflow Messenger component -->
@@ -68,7 +72,7 @@
     language-code="en"
     max-query-length="-1">
     <df-messenger-chat-bubble
-      chat-title="Project Manager">
+      chat-title="Ticket Pilot">
     </df-messenger-chat-bubble>
   </df-messenger>
 
