--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <!-- Dialogflow Messenger UI -->
   <link rel="stylesheet" href="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/themes/df-messenger-default.css">
-  <script src="https://www.gstatic.com/dialogflow-console/fast/df-messenger.js"></script>
+  <script src="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/df-messenger.js"></script>
 
   <style>
     body {
@@ -46,7 +46,6 @@
       --df-messenger-chat-background: #f3f6fc;
       --df-messenger-message-user-background: #d3e3fd;
       --df-messenger-message-bot-background: #fff;
-      --df-messenger-chat-bubble-background: #3f51b5;
     }
   </style>
 </head>
@@ -57,7 +56,7 @@
   </header>
 
   <main>
-    <p>Welcome to Ticket Pilot — your intelligent assistant powered by Dialogflow.</p>
+    <p>Welcome to the Ticket Pilot — your intelligent assistant powered by Dialogflow.</p>
     <p>Ask your project management questions by clicking the chat bubble in the bottom right.</p>
   </main>
 
