--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <title>Ticket Pilot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <!-- Dialogflow Messenger UI -->
   <link rel="stylesheet" href="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/themes/df-messenger-default.css">
-  <script src="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/df-messenger.js"></script>
+  <script src="https://www.gstatic.com/dialogflow-console/fast/df-messenger.js"></script>
 
   <style>
     body {
@@ -41,11 +41,13 @@
       position: fixed;
       bottom: 16px;
       right: 16px;
+
       --df-messenger-font-color: #000;
       --df-messenger-font-family: "Google Sans", sans-serif;
       --df-messenger-chat-background: #f3f6fc;
       --df-messenger-message-user-background: #d3e3fd;
       --df-messenger-message-bot-background: #fff;
+      --df-messenger-chat-bubble-background: #3f51b5;
     }
   </style>
 </head>
@@ -56,21 +58,20 @@
   </header>
 
   <main>
-    <p>Welcome to the Ticket Pilot — your intelligent assistant powered by Dialogflow.</p>
-    <p>Ask your project management questions by clicking the chat bubble in the bottom right.</p>
+    <p>Welcome to Ticket Pilot — your intelligent assistant powered by Dialogflow.</p>
+    <p>Click the chat bubble in the bottom right to ask your project-related questions.</p>
   </main>
 
-  <!-- Dialogflow Messenger component -->
+  <!-- Dialogflow Messenger Component -->
   <df-messenger
     location="us-central1"
     project-id="hackathon-overlords"
     agent-id="db5b3f3a-f656-4c7e-88f1-15c8b443fe8f"
     language-code="en"
     max-query-length="-1">
-    <df-messenger-chat-bubble
-      chat-title="Ticket Pilot">
-    </df-messenger-chat-bubble>
+    <df-messenger-chat-bubble chat-title="Ticket Pilot"></df-messenger-chat-bubble>
   </df-messenger>
 
 </body>
 </html>
+
