--- a/index.html
+++ b/index.html
@@ -6,33 +6,68 @@
   <title>Ticket Pilot</title>
   <link rel="stylesheet" href="https://www.gstatic.com/dialogflow-console/fast/df-messenger/prod/v1/themes/df-messenger-default.css">
   <style>
+    :root {
+      --primary-color: #1a73e8;
+      --background-color: #f9f9f9;
+      --text-color: #000;
+    }
+
     body {
       margin: 0;
       font-family: 'Google Sans', sans-serif;
-      background-color: #f9f9f9;
+      background-color: var(--background-color);
+      color: var(--text-color);
     }
+
     header {
-      background-color: #1a73e8;
+      background-color: var(--primary-color);
       color: white;
-      padding: 16px;
+      padding: 1rem;
       text-align: center;
-      font-size: 24px;
+      font-size: 1.75rem;
       font-weight: bold;
     }
+
     main {
-      padding: 40px;
+      padding: 2rem;
       text-align: center;
+      font-size: 1.1rem;
+      line-height: 1.6;
     }
+
     df-messenger {
       z-index: 999;
       position: fixed;
-      --df-messenger-font-color: #000;
+      --df-messenger-font-color: var(--text-color);
       --df-messenger-font-family: Google Sans;
       --df-messenger-chat-background: #f3f6fc;
       --df-messenger-message-user-background: #d3e3fd;
       --df-messenger-message-bot-background: #fff;
       bottom: 16px;
       right: 16px;
+    }
+
+    @media (max-width: 768px) {
+      header {
+        font-size: 1.5rem;
+        padding: 0.75rem;
+      }
+
+      main {
+        padding: 1.5rem 1rem;
+        font-size: 1rem;
+      }
+
+      df-messenger {
+        bottom: 8px;
+        right: 8px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      main {
+        font-size: 0.95rem;
+      }
     }
   </style>
 </head>
